SAR Blai Sandbox/src/objects/Condiciones_Contratos__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Aplica__c</fullName>
        <label>Aplica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__c</fullName>
        <label>Centro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo__c</fullName>
        <label>Código</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documento__c</fullName>
        <label>Documento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idioma__c</fullName>
        <label>Idioma</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Contrato__c</fullName>
        <label>Num Contrato</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocolo__c</fullName>
        <label>Protocolo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro__c</fullName>
        <label>Registro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revisión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Estancia__c</fullName>
        <description>Permanente o temporal</description>
        <label>Tipo Estancia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Servicio__c</fullName>
        <label>Tipo Servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Financiacion__c</fullName>
        <label>Tipo de Financiación</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titulo__c</fullName>
        <label>Título</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Condiciones Contratos</label>
</CustomObject>